# reqaz

./: .editorconfig  Cargo.toml  LICENSE  Makefile  README.md  log.txt  package-lock.json  package.json  test.sh  tsconfig.json
.zed/: settings.json
cli/: Cargo.toml  package.json  tsconfig.json
cli-rs/: Cargo.toml
cli-rs/src/: html.rs  main.rs  mime.rs  source.rs
cli-rs/src/html/: attr.rs  mods.rs
cli-rs/src/html/mods/: fetch.rs  script.rs
cli/src/: fs.ts  html.rs  html.ts  index.ts  main.rs  mediatype.rs  source.rs  source.ts  utils.ts
cli/src/html/: attr.rs
cli/src/html/mods/: fetch.rs  script.rs
e2e/expected/: fetch.html.diff  fetch_css.html.diff
e2e/expected/component/: basic_component.html.diff  comp_has_comp.html.diff  title_propped.html.diff  with_other_content.html.diff  with_props.html.diff  with_slots.html.diff
e2e/web/: basic.html  fetch.html  fetch_css.html  index.html
e2e/web/_components/: H1Propped.html  H1Slotted.html  List.html  TitlePropped.html
e2e/web/component/: basic_component.html  comp_has_comp.html  title_propped.html  with_other_content.html  with_props.html  with_slots.html
src/: html.rs  lib.rs  main.rs  mediatype.rs  source.rs
src/html/: attr.rs  mods.rs
src/html/mods/: component.rs  css.rs  fetch.rs  script.rs
tests/: source.rs
tests/common/: mod.rs
website/: package.json
website/src/: config.scss  index.html
website/src/components/: footer.css  footer.html  footer.scss  header.css  header.html
website/src/components/pages/: benefit.html
website/src/pages/: index.html
website/src/static/: global.css  global.scss
website/src/static/css/: index.scss
