[package]
name = "reqaz"
version = "0.1.0"
edition = "2021"
description = "Requests from A to Z"
license = "MIT"
repository = "https://github.com/lernib/reqaz"
keywords = ["requests", "modify", "http", "html"]
categories = ["template-engine", "web-programming"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
html5ever = "0.26.0"
http = "1"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
kuchikiki = "0.8.2"
lightningcss = { version = "1.0.0-alpha.55", features = ["into_owned"] }
mediatype = "0.19.18"
rsass = "0.28.8"
tokio = { version = "1.37.0", features = ["macros", "fs", "net", "rt-multi-thread"] }
ureq = "2.9.6"
