[package]
name = "reqaz"
version = "0.1.0"
edition = "2021"
description = "Requests from A to Z"
license = "MIT"
repository = "https://github.com/lernib/reqaz"
keywords = ["requests", "modify", "http", "html"]
categories = ["template-engine", "web-programming"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }
color-eyre = { version = "0.6.3" }
eyre = "0.6.12"
html-escape = "0.2.13"
html5ever = "0.26.0"
http = "1"
http-body-util = "0.1.1"
http-serde = "2.1.0"
hyper = { version = "1.2.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
kuchikiki = "0.8.2"
lightningcss = { version = "1.0.0-alpha.55", features = ["into_owned"] }
mediatype = "0.19.18"
rsass = "0.28.8"
serde = { version = "1.0.198", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }
tokio = { version = "1.37.0", features = [
    "macros",
    "fs",
    "net",
    "rt-multi-thread",
] }
ureq = "2.9.6"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde", "dep:serde_json"]
serde_json = ["dep:serde_json"]

[dev-dependencies]
paste = "1"
