[package]
name = "nib-website-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colog = "1.3.0"
color-eyre = "0.6.3"
eyre = "0.6.12"
html5ever = "0.26.0"
http = "1"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
kuchikiki = "0.8.2"
lazy_static = "1.4.0"
lightningcss = { version = "1.0.0-alpha.55", features = ["into_owned"] }
log = "0.4.21"
mediatype = "0.19.18"
nib-script = { version = "0.1.0", path = "../packages/script" }
tokio = { version = "1.37.0", features = ["macros", "fs", "net", "rt-multi-thread"] }
ureq = "2.9.6"
